# Studies-PWR

./: README.md
Algorytmy-i-struktury-danych/: README.md
Algorytmy-i-struktury-danych/Lista_1/zad_1/podejscie_lista_fifo/: CMakeLists.txt  main.cpp  zad1
Algorytmy-i-struktury-danych/Lista_2/: CMakeLists.txt  ascGenerator.cpp  descGenerator.cpp  dualPivotQuickSort.cpp  hybridSort.cpp  insertionSort.cpp  main.cpp  mergeSort.cpp  quickSort.cpp  randomGenerator.cpp
Algorytmy-i-struktury-danych/Lista_2/data/: insertion.rtf
Algorytmy-i-struktury-danych/Lista_3/: BinarySearch.cpp  CMakeLists.txt  DualPivotQuickSort.cpp  Makefile  QuickSelectSort.cpp  RandomizedSelect.cpp  Select.cpp  Testing.cpp
Algorytmy-i-struktury-danych/Lista_3/compiled/: BinarySearch  DualPivotQuickSort  QuickSelectSort  RandomizedSelect  Select
Aplikacje-Mobilne/: README.md
Aplikacje-Mobilne/Lista-1/: README.md
Aplikacje-Mobilne/Lista-1/zad1-java/: settings.gradle
Aplikacje-Mobilne/Lista-1/zad1-kotlin/: settings.gradle
Architektura-Systemow-Komputerowych/Lista_4/: diff.txt  oldsite.txt  zad1.sh  zad2.sh  zad3.sh  zad4.sh
Discrete-Optimization-Algorithms/: README.md
Functional-Programming/: README.md
Functional-Programming/solutions/: zad16.hs  zad17.hs  zad18.hs  zad18_2.hs  zad19.hs  zad20.hs  zad30.hs  zad31.hs  zad32.hs  zad33.hs  zad34.hs  zad35.hs  zad36.hs  zad39.hs  zad41.hs  zad46.hs  zad47.hs  zad51.hs  zad61.hs  zad65.hs  zadankasToSend.hs
Języki-Formalne-i-Teoria-Translacji/: README.md
Języki-Formalne-i-Teoria-Translacji/Lista_3/: zad1  zad1.l  zad1.y  zad1l.c  zad1y.cpp
Kurs-Programowania/: README.md
Obliczenia-Naukowe/: README.md
Obliczenia-Naukowe/Lista-1/: Zad1.jl  Zad2.jl  Zad3.jl  Zad4.jl  Zad5.jl  zad6.jl  zad7.jl
Obliczenia-Naukowe/Lista-3/: miejsca_zerowe.jl  testy.jl  zad4.jl  zad5.jl  zad6.jl
Obliczenia-Naukowe/Lista-5/: blocksys.jl  functions.jl  myTest.jl  test_matrix.txt  tests.jl  zad1.jl
Technologia-Programowania/Invoice_Generator_lista_2/: pom.xml
(+418 files in other folders)
